kubernetes/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: main-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: dev
    kubernetes.io/ingress.allow-http: "false"
  labels:
    app: gt
spec:
  tls:
  - secretName: sslcerts
  rules:
    - http:
        paths:
          - path: /api/*
            backend:
              serviceName: backend-app
              servicePort: 80
          - path: /*
            backend:
              serviceName: frontend-client
              servicePort: 80
